--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   check_version:
-    name: Check version
+    name: Tag/Check version
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -16,7 +16,9 @@ jobs:
 
       - name: Extract tag version
         id: extract_tag
-        run: echo "TAG_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+        run: |
+          TAG_VERSION=${GITHUB_REF#refs/tags/}
+          echo "TAG_VERSION=$TAG_VERSION" >> $GITHUB_ENV
 
       - name: Extract version from file
         id: extract_version
