--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -76,7 +76,9 @@ jobs:
         fetch-depth: 1
     - name: Get version
       id: version
-      run: echo "version=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_OUTPUT
+      run: |
+        TAG_VERSION=${GITHUB_REF#refs/tags/}
+        echo "version=$TAG_VERSION" >> $GITHUB_OUTPUT
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
