--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -83,7 +83,7 @@ jobs:
       uses: softprops/action-gh-release@v1
       with:
         tag_name: ${{ github.ref }}
-        name: Release ${{ github.ref }}
+        name: Release ${{ steps.version.outputs.version }}
         generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
