--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -51,6 +51,8 @@ jobs:
       uses: docker/setup-qemu-action@v3
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64
     - name: Login to DockerHub
       uses: docker/login-action@v3
       with:
@@ -80,7 +82,7 @@ jobs:
         TAG_VERSION=${GITHUB_REF#refs/tags/}
         echo "version=$TAG_VERSION" >> $GITHUB_OUTPUT
     - name: Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         tag_name: ${{ github.ref }}
         name: Release ${{ steps.version.outputs.version }}
