--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -49,6 +49,8 @@ jobs:
         images: ghcr.io/miaucl/docker2mqtt
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
@@ -66,6 +68,7 @@ jobs:
         push: true
         tags: ${{ steps.docker_meta.outputs.tags }}
         labels: ${{ steps.docker_meta.outputs.labels }}
+        platforms: linux/amd64,linux/arm64
 
   release:
     name: Tag/Release
