--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,7 +135,7 @@ split-on-trailing-comma = false
 [tool.ruff.lint.per-file-ignores]
 
 # Allow for main entry & scripts to write to stdout
-"src/__main__.py" = ["T201"]
+"docker2mqtt/__main__.py" = ["T201"]
 "script/*" = ["T20"]
 
 [tool.ruff.lint.mccabe]
