--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = 2.0.0-rc.0
 author = Cyrill Raccaud
 author_email = cyrill.raccaud+pypi@gmail.com
 description = Send your docker stats and and events to mqtt and discovery them in home assistant.
-long_description = file: README.md, LICENCE
+long_description = file: README.md, CHANGELOG.md, LICENCE
 long_description_content_type = text/markdown
 license_files = LICENSE
 url = https://github.com/miaucl/docker2mqtt
