--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Extract version from file
         id: extract_file_version
         run: |
-          VERSION=$(grep '__VERSION__' ./docker2mqtt/__init__.py | sed -E 's/version = "(.*)"/\1/')
+          VERSION=$(grep '__VERSION__' ./docker2mqtt/__init__.py | sed -E 's/__VERSION__ = "(.*)"/\1/')
           echo "FILE_VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Extract version from setup config
