--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,7 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
+
   check_version:
     name: Check the version
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
@@ -64,7 +65,8 @@ jobs:
             exit 1
           else
             echo "Tag version ($TAG_VERSION) matches file version ($FILE_VERSION)."
-          fi    
+          fi
+
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
@@ -83,6 +85,7 @@ jobs:
         path: dist/
     - name: Publish distribution 📦 to PyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+
   publish-to-ghcr:
     name: Publish Docker Image to Container Registry
     needs: check_version
@@ -118,10 +121,10 @@ jobs:
         tags: ${{ steps.docker_meta.outputs.tags }}
         labels: ${{ steps.docker_meta.outputs.labels }}
         platforms: linux/amd64,linux/arm64    
+  
   github-release:
     name: >-
-      Sign the Python 🐍 distribution 📦 with Sigstore
-      and upload them to GitHub Release
+      Create GitHub release and attach binaries
     needs:
     - publish-to-pypi
     - publish-to-ghcr
@@ -159,14 +162,6 @@ jobs:
         generate_release_notes: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
-    # - name: Create GitHub Release
-    #   env:
-    #     GITHUB_TOKEN: ${{ github.token }}
-    #   run: >-
-    #     gh release create
-    #     '${{ github.ref_name }}'
-    #     --repo '${{ github.repository }}'
-    #     --generate-notes
     - name: Upload artifact signatures to GitHub Release
       env:
         GITHUB_TOKEN: ${{ github.token }}
