--- a/setup.cfg
+++ b/setup.cfg
@@ -7,11 +7,20 @@ description = Send your docker stats and and events to mqtt and discovery them i
 long_description = file: README.md, CHANGELOG.md, LICENCE
 long_description_content_type = text/markdown
 license_files = LICENSE
+keywords = 
+  mqtt
+  paho
+  docker
+  metrics
 url = https://github.com/miaucl/docker2mqtt
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
+    Intended Audience :: Information Technology
+    Topic :: System :: Monitoring
+    Topic :: System :: Logging
+    Topic :: System :: Systems Administration
 
 [project.urls]
 Documentation = "https://miaucl.github.io/docker2mqtt/"
@@ -29,3 +38,7 @@ include_package_data = True
 
 [options.package_data]
 docker2mqtt = py.typed
+
+[options.entry_points]
+console_scripts =
+  docker2mqtt = docker2mqtt.docker2mqtt:main
