improve markdownlint and add to pre-commit

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "gethostname",
     "HOMEASSISTANT",
     "levelname",
+    "markdownlint",
     "memorylimit",
     "memoryused",
     "miaucl",
