--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -21,6 +21,9 @@ defaults:
   run:
     shell: bash
 
+env:
+  DEFAULT_PYTHON: "3.12"
+    
 jobs:
   build:
 
@@ -31,7 +34,8 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: ${{ env.DEFAULT_PYTHON }}
+        check-latest: true
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
