--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Extract version from setup config
         id: extract_config_version
         run: |
-          VERSION=$(grep 'version' ./setup.cfg | sed -E 's/version = (.*)[[:space:]]/\1/')
+          VERSION=$(grep 'version' ./setup.cfg | sed -E 's/version = (.*)[[:space:]]*$/\1/')
           echo "CONFIG_VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Compare versions
@@ -71,6 +71,19 @@ jobs:
             echo "Tag version ($TAG_VERSION) matches file version ($FILE_VERSION)."
           fi
 
+      - name: Check changelog entry
+        run: |
+          if [ github.ref =~ 'refs/tags/[0-9]+\\.[0-9]+\\.[0-9]+$' ]; then
+            if ! grep -q "## $TAG_VERSION" CHANGELOG.md; then
+              echo "No changelog entry found for version $TAG_VERSION."
+              exit 1
+            else
+              echo "Changelog entry found for version $TAG_VERSION."
+            fi
+          else
+            echo "Pre-release tag, skipping changelog check"
+          fi
+    
   publish-to-pypi:
     name: >-
       Publish Python 🐍 distribution 📦 to PyPI
