--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "blockoutputrate",
     "gethostname",
     "HOMEASSISTANT",
+    "jsons",
     "levelname",
     "markdownlint",
     "memorylimit",
