--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = docker2mqtt
-version = 2.0.5
+version = attr: docker2mqtt.__version__
 author = Cyrill Raccaud
 author_email = cyrill.raccaud+pypi@gmail.com
 description = Send your docker stats and and events to mqtt and discovery them in home assistant.
